the updated website

--- a/index/additional_pages/drink.html
+++ b/index/additional_pages/drink.html
@@ -24,26 +24,40 @@
         <p>A short video about food.</p>
         <a href="food.html"><img style="height: 100px" src="http://www.drawingcoach.com/image-files/cartoon_food_st5.gif" alt="food pic"></a>
       </li>
+      <br>
       <li>
         <a href="sport.html">Sport</a>
         <p>A short video about sport.</p>
         <a href="sport.html"><img style="height: 100px" src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX10542885.jpg" alt="sport pic"></a>
       </li>
+      <br>
       <li>
         <a href="drink.html">Drink</a>
         <p>A short video about drink.</p>
         <a href="drink.html"><img style="height: 100px" src="https://previews.123rf.com/images/bruno1998/bruno19981402/bruno1998140200062/25996250-cartoon-illustration-showing-a-pair-of-fancy-drinks-with-little-umbrellas-and-fruit-in-them.jpg" alt="drink pic"></a>
       </li>
+      <br>
       <li>
         <a href="../index.html">Home</a>
       </li>
     </ul>
   </div>
-
+<section class="drink-and-sport-videos" style="padding-left: 400px">
 <div style="font-size: 40px">A Drink Video!</div>
   <iframe style="padding-top: 10px" width="500" height="300" src="https://www.youtube.com/embed/k0ERi0Bt8Gk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 <p>A great video about drink</p>
+</section>
+<section class="other-videos">
+  Other Videos:
+  <br><br>
+  <a href="https://www.youtube.com/results?search_query=food" target="_blank">Food Videos</a>
+  <br><br>
+  <a href="https://www.youtube.com/results?search_query=sport" target="_blank">Sport Videos</a>
+  <br><br>
+  <a href="https://www.youtube.com/results?search_query=drink" target="_blank">Drink Videos</a>
+  <br><br><br>
+</section>
 </main>
 </body>
 </html>
