--- a/index/index.html
+++ b/index/index.html
@@ -23,23 +23,45 @@
       <p>A short video about food.</p>
       <a href="additional_pages/food.html"><img style="height: 100px" src="http://www.drawingcoach.com/image-files/cartoon_food_st5.gif" alt="food pic"></a>
     </li>
+    <br>
     <li>
       <a href="additional_pages/sport.html">Sport</a>
       <p>A short video about sport.</p>
       <a href="additional_pages/sport.html"><img style="height: 100px" src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX10542885.jpg" alt="sport pic"></a>
     </li>
+    <br>
     <li>
       <a href="additional_pages/drink.html">Drink</a>
       <p>A short video about drink.</p>
       <a href="additional_pages/drink.html"><img style="height: 100px" src="https://previews.123rf.com/images/bruno1998/bruno19981402/bruno1998140200062/25996250-cartoon-illustration-showing-a-pair-of-fancy-drinks-with-little-umbrellas-and-fruit-in-them.jpg" alt="drink pic"></a>
     </li>
+    <br>
     <li>
       <a href="index.html">Home</a>
     </li>
   </ul>
 </div>
 
-<h1 class="intro">Welcome to my Video Project!</h1>
+<section>
+
+<h1 class="intro">
+  Welcome to my Video Project!
+  <br><br><br>
+  <p>Click the logo for a secret link!</p>
+</h1>
+
+</section>
+<section class="other-videos">
+  Other Videos:
+  <br><br>
+  <a href="https://www.youtube.com/results?search_query=food" target="_blank">Food Videos</a>
+  <br><br>
+  <a href="https://www.youtube.com/results?search_query=sport" target="_blank">Sport Videos</a>
+  <br><br>
+  <a href="https://www.youtube.com/results?search_query=drink" target="_blank">Drink Videos</a>
+  <br><br><br>
+</section>
 </main>
+
 </body>
 </html>
